# local_cli

./: .gitignore  CLAUDE.md  README.md  adaptive_engine.py  adaptive_seed.py  aiignore.py  builder.py  chat.py  cli.py  clipboard.py  command_registry.py  config.py  context_manager.py  diff_editor.py  display.py  error_diagnosis.py  file_utils.py  git_integration.py  llm_backend.py  logging_util.py  mcp_server.py  memory.py  metrics.py  model_router.py  outcome_tracker.py  planner.py  project_context.py  project_reviewer.py  prompt_optimizer.py  prompts.py  pyproject.toml  requirements.txt  response_validator.py  sandbox.py  session_manager.py  setup.ps1  setup.sh  setup_wizard.py  templates.py  tool_registry.py  (+3 more)
adaptive/: __init__.py  adaptive_engine.py  adaptive_seed.py  outcome_tracker.py  prompt_optimizer.py  response_validator.py
core/: __init__.py  chat.py  command_registry.py  config.py  context_manager.py  display.py  memory.py  session_manager.py  setup_wizard.py  undo.py
llm/: __init__.py  llm_backend.py  model_router.py  prompts.py
planning/: __init__.py  builder.py  builder_deps.py  builder_files.py  builder_llm.py  builder_models.py  builder_parallel.py  builder_progress.py  builder_prompts.py  builder_validation.py  explorer.py  planner.py  project_context.py  project_reviewer.py  templates.py
tests/: conftest.py  test_adaptive_engine.py  test_adaptive_seed.py  test_aiignore.py  test_analysis_tools.py  test_builder.py  test_chat_engine.py  test_command_registry.py  test_config.py  test_context_compaction.py  test_context_manager.py  test_coverage_expansion.py  test_coverage_final.py  test_diff_editor.py  test_diff_editor_extra.py  test_directory_ops.py  test_display.py  test_error_diagnosis.py  test_explorer_and_builder.py  test_file_ops.py  test_file_utils.py  test_git_integration.py  test_llm_backend.py  test_mcp_client.py  test_mcp_server.py  test_memory.py  test_metrics.py  test_misc_tools.py  test_model_router_full.py  test_outcome_tracker.py  test_pipeline.py  test_planner.py  test_project_cache.py  test_project_reviewer.py  test_prompt_optimizer.py  test_prompts.py  test_response_validator.py  test_routing_transparency.py  test_sandbox.py  test_search_tools.py  (+9 more)
tools/: __init__.py  analysis.py  archive.py  common.py  database.py  directory_ops.py  docker.py  dotenv.py  env.py  file_ops.py  git_tools.py  json_tools.py  lint.py  mcp_client.py  package.py  scaffold.py  search.py  shell.py  testing.py  web.py
utils/: __init__.py  aiignore.py  clipboard.py  diff_editor.py  error_diagnosis.py  git_integration.py  logging_util.py  mcp_registry.py  metrics.py  sandbox.py  tool_registry.py  watch_mode.py
