[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-ai-cli"
version = "0.1.0"
description = "A feature-rich command-line coding assistant powered by Ollama (local LLMs)"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.24",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
mcp = [
    "mcp[cli]>=1.0",
]

[project.scripts]
ai = "cli:main"
ai-mcp = "mcp_server:main"

[tool.setuptools]
packages = ["core", "planning", "llm", "tools", "adaptive", "utils"]
py-modules = [
    "cli",
    "mcp_server",
    # Root shims (backwards compatibility)
    "config",
    "chat",
    "display",
    "command_registry",
    "session_manager",
    "context_manager",
    "memory",
    "undo",
    "planner",
    "builder",
    "project_context",
    "project_reviewer",
    "templates",
    "llm_backend",
    "model_router",
    "prompts",
    "adaptive_engine",
    "adaptive_seed",
    "outcome_tracker",
    "prompt_optimizer",
    "sandbox",
    "file_utils",
    "git_integration",
    "diff_editor",
    "error_diagnosis",
    "clipboard",
    "aiignore",
    "watch_mode",
    "metrics",
    "logging_util",
    "tool_registry",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "S"]
ignore = ["E501", "S603", "S607", "B904"]
